objects/Salesforce_Support__c.object
<CustomObject>
    <description>Where tasks and issues on the Salesforce system are submitted.</description>
    <fields>
        <fullName>Accountable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accountable</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesforce_Support5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accountable__c</fullName>
        <label>Accountable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_SSR__c</fullName>
        <label>Assigned To</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Module__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A3SH_Admin_Difficult</fullName>
                    <label>A3SH - Admin (Difficult)</label>
                </value>
                <value>
                    <fullName>A3SH_ Admin_Easy</fullName>
                    <label>A3SH - Admin (Easy)</label>
                </value>
                <value>
                    <fullName>ASH - PMO</fullName>
                </value>
                <value>
                    <fullName>Charles Walstrom</fullName>
                </value>
                <value>
                    <fullName>Critical River - Admin</fullName>
                </value>
                <value>
                    <fullName>Critical River - Developer</fullName>
                </value>
                <value>
                    <fullName>Jay Albere</fullName>
                </value>
                <value>
                    <fullName>Joy Okere</fullName>
                </value>
                <value>
                    <fullName>Rhonda Clonts</fullName>
                </value>
                <value>
                    <fullName>Ricardo Ross Redi</fullName>
                </value>
                <value>
                    <fullName>Sai Raj Kothamasu - Critical River</fullName>
                </value>
                <value>
                    <fullName>Shweta Mahadik</fullName>
                </value>
                <value>
                    <fullName>Vivek Raj</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rhonda Clonts</fullName>
                    <color>#FF0000</color>
                    <label>A3SH - Admin (Difficult)</label>
                </value>
                <value>
                    <fullName>A3SH-Admin (Easy)</fullName>
                    <label>A3SH - Admin (Easy)</label>
                </value>
                <value>
                    <fullName>A3SH-PMO</fullName>
                    <label>A3SH - PMO</label>
                </value>
                <value>
                    <fullName>CriticalRiver</fullName>
                    <color>#3366FF</color>
                    <label>Critical River - Admin</label>
                </value>
                <value>
                    <fullName>Critical River-Developer</fullName>
                    <label>Critical River - Developer</label>
                </value>
                <value>
                    <fullName>Jay Albere</fullName>
                </value>
                <value>
                    <fullName>Joy Okere</fullName>
                </value>
                <value>
                    <fullName>Sai Raj Kothamasu</fullName>
                    <label>Sai Raj Kothamasu - Critical River</label>
                </value>
                <value>
                    <fullName>Fivserv Group</fullName>
                    <label>Fiserv Group</label>
                </value>
                <value>
                    <fullName>Member Portal Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_Phone_Number_to_Reach_Member__c</fullName>
        <label>Best Phone # to Reach You or Team Member</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Impact__c</fullName>
        <label>Business Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Justification__c</fullName>
        <label>Business Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Location__c</fullName>
        <description>Current location of the SSR for status and review (Sandbox or Production)</description>
        <inlineHelpText>This field will give you the location of the current Salesforce Support Request.</inlineHelpText>
        <label>Current Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Work_Location_of_Issue__c</fullName>
        <label>Current Work Location of Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Resolved_Closed__c</fullName>
        <label>Date Resolved/Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date Submitted</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Test_Completed_in_Sandbox__c</fullName>
        <label>Date Test Completed in Sandbox</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployed_in_Production__c</fullName>
        <label>Deployed in Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <label>Detailed Description</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Number of days to resolve task or issue.</description>
        <formula>Today() -  Date_Submitted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Team_Member__c</fullName>
        <inlineHelpText>List anyone who is not in the Team Member lookup field.</inlineHelpText>
        <label>External Team Member</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Admin_Email_Address__c</fullName>
        <defaultValue>&quot;joy.okere@norcal.aaa.com&quot;</defaultValue>
        <label>FSL Admin Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Link_to_Jira_IT_Ticket__c</fullName>
        <label>Link to Jira/IT Ticket</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Member_Account_Number__c</fullName>
        <label>Member Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Email_Address__c</fullName>
        <label>Member Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <label>Member Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Phone_Number__c</fullName>
        <label>Member Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <description>Salesforce Object</description>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FSL - Scheduling &amp; Dispatch</fullName>
                </value>
                <value>
                    <fullName>FSL - Technician App</fullName>
                </value>
                <value>
                    <fullName>Service Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>&quot;Medium&quot;</defaultValue>
        <label>Priority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical - Work Stoppage</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>On-Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ready_for_QA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_to_Deploy__c</fullName>
        <label>Ready to Deploy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_Version__c</fullName>
        <label>Release Version</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_for_Yourself_or_Team_Member__c</fullName>
        <label>Request for Yourself or Team Member?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Myself</fullName>
                </value>
                <value>
                    <fullName>Team Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Search/provide team member(s) who should be notified of the status of the ticket.</description>
        <inlineHelpText>Please provide your name as the requester.</inlineHelpText>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesforce_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Verified_By_Reporter_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox checked when task/issue has been reviewed and approved to close SSR</description>
        <label>Resolution Verified By Reporter-Product.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution_Verified_By_Reporter_Sandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox checked when task/issue has been reviewed and approved to move to production.</description>
        <inlineHelpText>Please check box if you have reviewed and approved to move to production.</inlineHelpText>
        <label>Resolution Verified By Reporter-Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSR_Requester_Email__c</fullName>
        <label>SSR Requester Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Service_Quality_SF_Admin__c</fullName>
        <defaultValue>&quot;rhonda.clonts@a3smarthome.com&quot;</defaultValue>
        <label>Service Quality SF Admin</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Severity_Level__c</fullName>
        <label>Severity Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Severity 1</fullName>
                </value>
                <value>
                    <fullName>Severity 2</fullName>
                </value>
                <value>
                    <fullName>Severity 3</fullName>
                </value>
                <value>
                    <fullName>Severity 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Six_Digit_Employee_ID__c</fullName>
        <label>Six Digit Employee ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;New&quot;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-New</fullName>
                    <default>true</default>
                    <label>1-New</label>
                </value>
                <value>
                    <fullName>2-In Progress In Assessment</fullName>
                    <label>2-In Progress / In Assessment</label>
                </value>
                <value>
                    <fullName>3-Feedback Needed</fullName>
                </value>
                <value>
                    <fullName>3-Review &amp; Approve</fullName>
                </value>
                <value>
                    <fullName>4-Closed - Complete</fullName>
                </value>
                <value>
                    <fullName>5-Not Started</fullName>
                    <label>5-Backlog</label>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Moved to Jira</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Transfered</fullName>
                </value>
                <value>
                    <fullName>Update Admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Steps_to_Replicate_Results_Expected__c</fullName>
        <description>Provide the steps used to replicate your issue/task.</description>
        <inlineHelpText>Please provide as much detailed information you can to help Admin locate and understand your issue. Attach screenshots if applicable - Upload files link below.</inlineHelpText>
        <label>Steps to Replicate/Results Expected</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System_or_Application_is_Affected__c</fullName>
        <label>System or Application is Affected?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Application</fullName>
                </value>
                <value>
                    <fullName>Member Portal Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Member_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Search/provide team member(s) who should be notified of the status of the ticket.</description>
        <inlineHelpText>Search/provide team member(s) who should be notified of the status of the ticket.</inlineHelpText>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesforce_Support1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Member_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Search/provide team member(s) who should be notified of the status of the ticket.</description>
        <inlineHelpText>Search/provide team member(s) who should be notified of the status of the ticket.</inlineHelpText>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesforce_Support2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Member_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesforce_Support4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Member_EID__c</fullName>
        <label>Team Member EID #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member_Email__c</fullName>
        <label>Team Member Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Team_Member_Name_Not_In_SF__c</fullName>
        <label>Team Member Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesforce_Support3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Results_in_Production__c</fullName>
        <label>Test Results in Production</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved/Close/Complete</fullName>
                </value>
                <value>
                    <fullName>Waiting Dependency</fullName>
                </value>
                <value>
                    <fullName>Issue - See Notes Below</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Results_in_Sandbox__c</fullName>
        <label>Test Results in Sandbox</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approve to move to Production</fullName>
                </value>
                <value>
                    <fullName>Waiting Dependency</fullName>
                </value>
                <value>
                    <fullName>Issues - See notes below</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add_Remove_Edit_Field_Picklist</fullName>
                    <label>Add/Remove/Edit Field/Picklist</label>
                </value>
                <value>
                    <fullName>Big Commerce</fullName>
                </value>
                <value>
                    <fullName>CardEasy</fullName>
                </value>
                <value>
                    <fullName>Data Load | Export | Import</fullName>
                </value>
                <value>
                    <fullName>DealerNet</fullName>
                </value>
                <value>
                    <fullName>Email Template/Automation</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Fiserve_Billing_Payment_Issues</fullName>
                    <label>Fiserv (Billing &amp; Payment Issues)</label>
                </value>
                <value>
                    <fullName>InfoPortal</fullName>
                </value>
                <value>
                    <fullName>Internal Application Issue</fullName>
                </value>
                <value>
                    <fullName>Issue/Defect/Bug</fullName>
                </value>
                <value>
                    <fullName>Question/Training</fullName>
                </value>
                <value>
                    <fullName>Queue | Create | Change | Remove</fullName>
                </value>
                <value>
                    <fullName>Report/Dashboard</fullName>
                </value>
                <value>
                    <fullName>Salesforce Release</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>User Access</fullName>
                </value>
                <value>
                    <fullName>Member Portal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Access_Form_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Access Form</label>
        <referenceTo>User_Access_Form__c</referenceTo>
        <relationshipLabel>Salesforce Support</relationshipLabel>
        <relationshipName>Salesforce_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Access_Form__c</fullName>
        <label>User Access Form</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>of_Hours_expected_to_complete__c</fullName>
        <inlineHelpText>For Salesforce Admin Only</inlineHelpText>
        <label># of Hours expected to complete</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Salesforce Support</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Assigned_To_SSR__c</columns>
        <columns>Status__c</columns>
        <columns>Requester__c</columns>
        <columns>Priority__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Detailed_Description__c</columns>
        <columns>Module__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Member_Portal_Issues_Salesforce_Support</fullName>
        <booleanFilter>(1 AND 2) or 3</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Requester__c</columns>
        <columns>Accountable__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Resolved_Closed__c</columns>
        <columns>Short_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Salesforce_Support__c.Member_Portal_Issue</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Accountable__c</field>
            <operation>equals</operation>
            <value>Nick Laubham</value>
        </filters>
        <label>Member Portal Issues</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SSR_Tickets_Last_Modified</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Severity_Level__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Assigned_To_SSR__c</columns>
        <columns>Short_Description__c</columns>
        <columns>of_Hours_expected_to_complete__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>4-Closed - Complete,Canceled,Complete</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>notEqual</operation>
            <value>Fivserv Group,Member Portal Group</value>
        </filters>
        <label>SSR Tickets Last Modified</label>
        <sharedTo>
            <group>Salesforce_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Salesforce_Support_FSL_All_Open</fullName>
        <columns>Severity_Level__c</columns>
        <columns>Short_Description__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Requester__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>FSL - Scheduling &amp; Dispatch,FSL - Technician App</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>4-Closed - Complete,Canceled,Complete</value>
        </filters>
        <label>Salesforce Support FSL - All Open</label>
    </listViews>
    <listViews>
        <fullName>Salesforce_Support_High_Salesforce_Support</fullName>
        <columns>NAME</columns>
        <columns>Requester__c</columns>
        <columns>Priority__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Current_Location__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Module__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
            <value>High</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Rhonda Clonts</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>4-Closed - Complete</value>
        </filters>
        <label>Salesforce Support - High</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Salesforce_Support_New_Salesforce_Support</fullName>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Type__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Requester__c</columns>
        <columns>Module__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Short_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>1-New</value>
        </filters>
        <label>Salesforce Support - New</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Salesforce_Support_Salesforce_Support</fullName>
        <columns>Severity_Level__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Requester__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Date_Resolved_Closed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>4-Closed - Complete,Canceled,Complete</value>
        </filters>
        <label>Salesforce Support FSL</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Salesforce_Support_Salesforce_Support1</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Detailed_Description__c</columns>
        <columns>Module__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Requester__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>4-Closed - Complete,Complete,Moved to Jira</value>
        </filters>
        <label>Salesforce Support</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Salesforce_Support_Service_Cloud_Salesforce_Support</fullName>
        <booleanFilter>(1 AND 2 AND 3) OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Type__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Module__c</columns>
        <columns>Resolution_Verified_By_Reporter_Sandbox__c</columns>
        <columns>Detailed_Description__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Requester__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>4-Closed - Complete</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>notContain</operation>
            <value>Question/Training</value>
        </filters>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>Service Cloud</value>
        </filters>
        <filters>
            <field>Assigned_To_SSR__c</field>
            <operation>equals</operation>
            <value>A3SH_ Admin_Easy,A3SH_Admin_Difficult</value>
        </filters>
        <label>Salesforce Support (Service Cloud)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Salesforce_Support_Waiting_for_Feedbac_Salesforce_Support</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <columns>Requester__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Detailed_Description__c</columns>
        <columns>Current_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>3-Feedback Needed</value>
        </filters>
        <label>Salesforce Support-Waiting for Feedback</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SSR-{0}</displayFormat>
        <label>Salesforce Support Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Support</pluralLabel>
    <recordTypes>
        <fullName>Member_Portal_Issue</fullName>
        <active>true</active>
        <label>Member Portal / Billing and Payments Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce_Support</fullName>
        <active>true</active>
        <description>Where Salesforce tasks &amp; issues are submitted and received by SF Administrator.</description>
        <label>Salesforce Support</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>